# stockfish_ocaml

./: AUTHORS  README.md  dune-project  stockfish_ocaml.opam  stockfish_ocaml.opam.locked
.circleci/: ci  config.yml
lib/: bitboard.ml  checkmate_test.ml  dune  evaluation.ml  material.ml  movegen.ml  movepick.ml  position.ml  score.ml  search.ml  transposition_table.ml  tt.ml  types.ml  utils.ml
test/: dune
