(library
 (name stockfish_ocaml)
 (libraries base integers str)
 (inline_tests)
 (preprocess
  (pps
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_sexp_conv
   ppx_inline_test
   ppx_hash
   ppx_assert)))

(env
 ; (dev
 ; (flags
 ; (:standard -warn-error -A)))
 (release
  (ocamlopt_flags
   (:standard -O3 -unsafe -noassert -inline 100))))
